--- a/SokaJamur/app/src/main/res/layout/nav_header_home.xml
+++ b/SokaJamur/app/src/main/res/layout/nav_header_home.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@drawable/bg"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -14,23 +15,29 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="79dp"
-        android:layout_height="71dp"
+        android:layout_width="101dp"
+        android:layout_height="86dp"
         android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/icon" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/skranji_bold"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Soka Jamur"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="SOKA Jamur"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="admin@sokajamur.com" />
+        android:fontFamily="@font/skranji"
+        android:text="Jl. Mujahir No Sukorambi, Jember"
+        android:textColor="#ededed"
+        android:textSize="10sp" />
 
 </LinearLayout>
