--- a/SokaJamur/app/src/main/res/layout/splash_screen.xml
+++ b/SokaJamur/app/src/main/res/layout/splash_screen.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#cfe3eb">
 
     <ImageView
         android:id="@+id/ss"
@@ -18,5 +19,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ImageView>
+
 
 </android.support.constraint.ConstraintLayout>
