--- a/SokaJamur/app/src/main/res/menu/activity_home_drawer.xml
+++ b/SokaJamur/app/src/main/res/menu/activity_home_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_login"
             android:icon="@drawable/logout"
-            android:title="Login" />
+            android:title="Masuk"/>
     </group>
 
 </menu>
