--- a/SokaJamur/app/src/main/res/layout/activity_daftar.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_daftar.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#d5d5d5">
 
     <TextView
         android:id="@+id/textlogin"
-        android:layout_width="186dp"
-        android:layout_height="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="163dp"
         android:layout_marginStart="163dp"
         android:layout_marginTop="16dp"
         android:text="DAFTAR"
         android:textSize="45dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/skranji_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +44,7 @@
             android:ems="10"
             android:hint="Nama"
             android:inputType="text"
+            android:fontFamily="@font/skranji"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +62,7 @@
             android:ems="10"
             android:hint="Alamat"
             android:inputType="text"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -78,6 +81,7 @@
             android:ems="10"
             android:hint="No. Hp"
             android:inputType="number"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -96,6 +100,7 @@
             android:ems="10"
             android:hint="Email"
             android:inputType="text"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -114,12 +119,14 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textlogin"
-            app:layout_constraintVertical_bias="0.77" />
+            app:layout_constraintVertical_bias="0.77"
+            tools:ignore="DuplicateIds" />
 
         <Button
             android:id="@+id/btnmasuk"
@@ -129,7 +136,12 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:textSize="18sp"
             android:text="MASUK"
+            android:fontFamily="@font/skranji_bold"
+            android:background="#6c6c6c"
+            android:textColor="#ffffff"
+            android:layout_gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.899"
