--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -4,18 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d5d5d5"
     tools:context="com.reppernews.sokajamur.InfoBaglog">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout4"
         android:layout_width="368dp"
-        android:layout_height="194dp"
+        android:layout_height="187dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,53 +28,65 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="281dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/skranji_bold"
             android:text="Info Baglog"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView3"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.692" />
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="345dp"
-            android:layout_height="62dp"
+            android:layout_width="348dp"
+            android:layout_height="22dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="28dp"
             android:layout_marginStart="9dp"
             android:text="_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="20dp"
             android:layout_marginEnd="323dp"
             android:layout_marginStart="17dp"
+            android:fontFamily="@font/skranji"
             android:text="Stok"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="32dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="315dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="Harga"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout3"
         android:layout_width="368dp"
-        android:layout_height="286dp"
+        android:layout_height="330dp"
         android:layout_marginBottom="23dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -89,11 +103,15 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="278dp"
             android:layout_marginStart="6dp"
+            android:fontFamily="@font/skranji_bold"
             android:text="Pesan Baglog"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView18"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.428" />
 
         <EditText
             android:id="@+id/editText"
@@ -106,7 +124,7 @@
             app:layout_constraintBottom_toTopOf="@+id/editText2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <EditText
             android:id="@+id/editText2"
@@ -132,6 +150,7 @@
             android:id="@+id/editText4"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="4dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -141,7 +160,8 @@
         <EditText
             android:id="@+id/editText10"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="33dp"
+            android:layout_marginBottom="4dp"
             android:layout_marginEnd="4dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -155,7 +175,9 @@
             android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="Nama"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView19"
             app:layout_constraintEnd_toStartOf="@+id/editText"
             app:layout_constraintHorizontal_bias="0.0"
@@ -168,7 +190,9 @@
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="Alamat"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toStartOf="@+id/editText2"
             app:layout_constraintHorizontal_bias="0.0"
@@ -181,7 +205,9 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="No. Hp"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView21"
             app:layout_constraintEnd_toStartOf="@+id/editText3"
             app:layout_constraintHorizontal_bias="0.0"
@@ -191,48 +217,57 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:fontFamily="@font/skranji"
             android:text="Jumlah"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView22"
             app:layout_constraintEnd_toStartOf="@+id/editText4"
-            app:layout_constraintHorizontal_bias="0.091"
+            app:layout_constraintHorizontal_bias="0.102"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
-            android:layout_marginBottom="15dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
+            android:fontFamily="@font/skranji"
             android:text="Harga"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/textView23"
             app:layout_constraintEnd_toStartOf="@+id/editText10"
-            app:layout_constraintHorizontal_bias="0.083"
+            app:layout_constraintHorizontal_bias="0.091"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/textView23"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
+            android:layout_height="30dp"
+            android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="Metode Pembayaran"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@+id/btPilih2"
             app:layout_constraintEnd_toStartOf="@+id/cbBox2"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Spinner
             android:id="@+id/cbBox2"
-            android:layout_width="218dp"
-            android:layout_height="21dp"
+            android:layout_width="174dp"
+            android:layout_height="24dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginEnd="4dp"
+            android:background="#9aaab4"
             app:layout_constraintBottom_toTopOf="@+id/btPilih2"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -242,13 +277,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/cbBox"
             android:layout_centerHorizontal="true"
-            android:layout_marginEnd="218dp"
-            android:layout_marginStart="62dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:background="#6c6c6c"
             android:onClick="klikPilih"
             android:text="Pesan"
+            android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="OnClick" />
     </android.support.constraint.ConstraintLayout>
