--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -4,35 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#d5d5d5"
     tools:context="com.reppernews.sokajamur.InfoJamur">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="368dp"
-        android:layout_height="194dp"
+        android:layout_height="184dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.32">
 
         <TextView
             android:id="@+id/textView6"
-            android:layout_width="76dp"
-            android:layout_height="23dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="276dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/skranji_bold"
             android:text="Info Jamur"
-            android:textSize="14sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
@@ -40,8 +43,8 @@
         <TextView
             android:id="@+id/textView7"
             android:layout_width="331dp"
-            android:layout_height="62dp"
-            android:layout_marginBottom="28dp"
+            android:layout_height="36dp"
+            android:layout_marginBottom="32dp"
             android:layout_marginEnd="18dp"
             android:layout_marginStart="19dp"
             android:text="_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  __ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
@@ -53,11 +56,13 @@
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
-            android:layout_height="14dp"
-            android:layout_marginBottom="4dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="320dp"
             android:layout_marginStart="20dp"
             android:text="Stok"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -71,6 +76,8 @@
             android:layout_marginEnd="315dp"
             android:layout_marginStart="16dp"
             android:text="Harga"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -80,7 +87,7 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout2"
         android:layout_width="368dp"
-        android:layout_height="286dp"
+        android:layout_height="306dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,14 +97,15 @@
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="118dp"
-            android:layout_height="25dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="272dp"
             android:layout_marginStart="15dp"
             android:text="Pesan Jamur"
             android:textIsSelectable="false"
-            android:textSize="18sp"
+            android:textSize="20sp"
+            android:fontFamily="@font/skranji_bold"
             app:layout_constraintBottom_toTopOf="@+id/textView11"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -158,12 +166,14 @@
 
         <TextView
             android:id="@+id/textView11"
-            android:layout_width="61dp"
-            android:layout_height="31dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Nama"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView12"
             app:layout_constraintEnd_toStartOf="@+id/editText5"
             app:layout_constraintHorizontal_bias="0.133"
@@ -171,12 +181,14 @@
 
         <TextView
             android:id="@+id/textView12"
-            android:layout_width="62dp"
-            android:layout_height="33dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Alamat"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView13"
             app:layout_constraintEnd_toStartOf="@+id/editText6"
             app:layout_constraintHorizontal_bias="0.135"
@@ -184,12 +196,14 @@
 
         <TextView
             android:id="@+id/textView13"
-            android:layout_width="62dp"
-            android:layout_height="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="No. Hp"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView14"
             app:layout_constraintEnd_toStartOf="@+id/editText7"
             app:layout_constraintHorizontal_bias="0.135"
@@ -197,12 +211,14 @@
 
         <TextView
             android:id="@+id/textView14"
-            android:layout_width="63dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="15dp"
             android:text="Jumlah"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView15"
             app:layout_constraintEnd_toStartOf="@+id/editText8"
             app:layout_constraintHorizontal_bias="0.0"
@@ -210,12 +226,14 @@
 
         <TextView
             android:id="@+id/textView15"
-            android:layout_width="61dp"
-            android:layout_height="31dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:text="Harga"
+            android:textSize="17sp"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/textView16"
             app:layout_constraintEnd_toStartOf="@+id/editText9"
             app:layout_constraintHorizontal_bias="0.133"
@@ -225,21 +243,27 @@
             android:id="@+id/textView16"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="48dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
+            android:fontFamily="@font/skranji"
             android:text="Metode Pembayaran"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cbBox"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Spinner
             android:id="@+id/cbBox"
-            android:layout_width="218dp"
-            android:layout_height="21dp"
+            android:layout_width="169dp"
+            android:layout_height="19dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="16dp"
+            android:background="#9aaab4"
             app:layout_constraintBottom_toTopOf="@+id/btPilih"
             app:layout_constraintEnd_toEndOf="parent" />
 
