--- a/SokaJamur/app/src/main/res/layout/activity_login.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_login.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#d5d5d5">
 
     <TextView
         android:id="@+id/textlogin"
-        android:layout_width="169dp"
-        android:layout_height="52dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="163dp"
         android:layout_marginStart="163dp"
         android:layout_marginTop="44dp"
         android:text="MASUK"
-        android:textSize="45dp"
-        android:textStyle="bold"
+        android:textSize="45sp"
+        android:fontFamily="@font/skranji_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,6 +47,7 @@
             android:ems="10"
             android:hint="No. Hp"
             android:inputType="number"
+            android:fontFamily="@font/skranji"
             app:layout_constraintBottom_toTopOf="@+id/isianPass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
@@ -62,6 +64,7 @@
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
+            android:fontFamily="@font/skranji"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,13 +73,17 @@
 
         <Button
             android:id="@+id/btnmasuk"
-            android:layout_width="183dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="MASUK"
+            android:textColor="#ffffff"
+            android:background="#6c6c6c"
+            android:fontFamily="@font/skranji_bold"
+            android:layout_gravity="center"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.899"
@@ -92,7 +99,7 @@
         android:layout_marginStart="8dp"
         android:text="Belum Punya Akun?"
         android:textSize="21dp"
-        android:textStyle="bold"
+        android:fontFamily="@font/skranji"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -100,15 +107,15 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="73dp"
-        android:layout_height="33dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Daftar"
         android:textSize="20dp"
-        android:textStyle="bold"
-
+        android:textColor="#2d5a80"
+        android:fontFamily="@font/skranji_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
