--- a/SokaJamur/app/src/main/res/layout/content_home.xml
+++ b/SokaJamur/app/src/main/res/layout/content_home.xml
@@ -18,35 +18,39 @@
 
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="379dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/skranji_bold"
         android:text="Informasi Jamur dan Baglog"
-        android:textSize="20dp"
+        android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.132"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slider"
         app:layout_constraintVertical_bias="0.003" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="373dp"
-        android:layout_height="43dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/skranji_bold"
         android:text="Aneka Masakan Jamur"
-        android:textSize="20dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.101"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slider"
-        app:layout_constraintVertical_bias="0.971" />
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
+        app:layout_constraintVertical_bias="0.965" />
 
     <TextView
         android:id="@+id/textView7"
@@ -56,6 +60,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="Jamur Tiram"
+        android:textColor="#2d5a80"
+        android:fontFamily="@font/skranji"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
@@ -72,6 +78,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Penyakit Jamur"
+        android:textColor="#2d5a80"
+        android:fontFamily="@font/skranji"
         app:layout_constraintBottom_toBottomOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.037"
@@ -88,6 +96,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Budidaya Jamur"
+        android:textColor="#2d5a80"
+        android:fontFamily="@font/skranji"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.962"
@@ -104,6 +114,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Baglog Jamur"
+        android:textColor="#2d5a80"
+        android:fontFamily="@font/skranji"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.962"
