--- a/SokaJamur/app/src/main/res/layout/activity_login.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_login.xml
@@ -115,6 +115,7 @@
         android:text="Daftar"
         android:textSize="20dp"
         android:textColor="#2d5a80"
+        android:onClick="textView3"
         android:fontFamily="@font/skranji_bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
