--- a/SokaJamur/app/src/main/res/layout/activity_daftar.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_daftar.xml
@@ -20,6 +20,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="368dp"
         android:layout_height="402dp"
