intent info jamu & baglog

--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -150,7 +150,6 @@
             android:id="@+id/editText4"
             android:layout_width="wrap_content"
             android:layout_height="36dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginEnd="4dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -161,7 +160,7 @@
             android:id="@+id/editText10"
             android:layout_width="wrap_content"
             android:layout_height="33dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="4dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -172,7 +171,7 @@
             android:id="@+id/textView18"
             android:layout_width="wrap_content"
             android:layout_height="22dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="13dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/skranji"
@@ -187,7 +186,7 @@
             android:id="@+id/textView19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="10dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="16dp"
             android:fontFamily="@font/skranji"
@@ -217,7 +216,7 @@
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="14dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/skranji"
@@ -232,7 +231,7 @@
             android:id="@+id/textView22"
             android:layout_width="wrap_content"
             android:layout_height="21dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginBottom="36dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:fontFamily="@font/skranji"
@@ -280,7 +279,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:background="#6c6c6c"
-            android:onClick="klikPilih"
+            android:onClick="klikPilih2"
             android:text="Pesan"
             android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
