--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="276dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/skranji_bold"
             android:text="Info Jamur"
@@ -43,7 +43,7 @@
             android:layout_height="38dp"
             android:layout_marginBottom="32dp"
             android:layout_marginEnd="18dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="16dp"
             android:text="_ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _  __ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _ _"
             app:layout_constraintBottom_toTopOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:layout_marginEnd="320dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/skranji"
             android:text="Stok"
             android:textSize="17sp"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="29dp"
             android:layout_marginEnd="315dp"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="16dp"
             android:fontFamily="@font/skranji"
             android:text="Harga"
             android:textSize="17sp"
@@ -98,7 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="272dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginStart="6dp"
             android:fontFamily="@font/skranji_bold"
             android:text="Pesan Jamur"
             android:textIsSelectable="false"
@@ -284,6 +284,21 @@
             app:layout_constraintBottom_toTopOf="@+id/btPilih"
             app:layout_constraintEnd_toEndOf="parent" />
 
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="23dp"
+            android:layout_height="51dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/cbBox"
+            app:layout_constraintEnd_toEndOf="@+id/cbBox"
+            app:layout_constraintHorizontal_bias="0.969"
+            app:layout_constraintStart_toStartOf="@+id/cbBox"
+            app:layout_constraintTop_toTopOf="@+id/cbBox"
+            app:layout_constraintVertical_bias="0.61"
+            app:srcCompat="@drawable/logo_cbox" />
+
         <Button
             android:id="@+id/btPilih"
             android:layout_width="wrap_content"
@@ -293,8 +308,10 @@
             android:layout_marginBottom="4dp"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
+            android:background="#6c6c6c"
             android:onClick="klikPilih"
             android:text="Pesan"
+            android:textColor="#ffffff"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
