--- a/SokaJamur/app/src/main/res/layout/admin_barang.xml
+++ b/SokaJamur/app/src/main/res/layout/admin_barang.xml
@@ -8,6 +8,15 @@
     tools:context="com.reppernews.sokajamur.AdminBarang">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/constraintLayout"
         android:layout_width="368dp"
@@ -46,18 +55,18 @@
             android:id="@+id/editText10"
             android:layout_width="191dp"
             android:layout_height="39dp"
-            android:layout_marginBottom="108dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="@+id/editText18"
+            app:layout_constraintBottom_toTopOf="@+id/editText17"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.39" />
 
         <TextView
             android:id="@+id/textView19"
@@ -110,24 +119,24 @@
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.835" />
+            app:layout_constraintVertical_bias="0.76" />
 
         <EditText
             android:id="@+id/editText17"
             android:layout_width="191dp"
             android:layout_height="39dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="@+id/editText18"
+            app:layout_constraintBottom_toTopOf="@+id/editText18"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintVertical_bias="0.93" />
 
 
     </android.support.constraint.ConstraintLayout>
@@ -142,8 +151,7 @@
         app:layout_constraintBottom_toTopOf="@+id/btntambah"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints">
+        app:layout_constraintStart_toStartOf="parent">
 
 
         <TextView
@@ -151,18 +159,17 @@
             android:layout_width="78dp"
             android:layout_height="36dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="51dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:fontFamily="@font/skranji"
             android:text="Stok"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toStartOf="@+id/editText19"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.405" />
+            app:layout_constraintVertical_bias="0.47" />
 
         <TextView
             android:id="@+id/textView16"
@@ -195,26 +202,27 @@
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/editText11"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.055" />
+            app:layout_constraintVertical_bias="0.172" />
 
         <EditText
             android:id="@+id/editText11"
             android:layout_width="188dp"
             android:layout_height="39dp"
-            android:layout_marginBottom="108dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toBottomOf="@+id/editText20"
+            app:layout_constraintBottom_toTopOf="@+id/editText19"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.835"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.72" />
 
         <EditText
             android:id="@+id/editText19"
@@ -231,7 +239,7 @@
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.453" />
+            app:layout_constraintVertical_bias="0.39" />
 
         <EditText
             android:id="@+id/editText20"
@@ -248,20 +256,26 @@
             app:layout_constraintHorizontal_bias="0.85"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.951" />
-
+            app:layout_constraintVertical_bias="0.869" />
 
     </android.support.constraint.ConstraintLayout>
 
-    <Button
-        android:id="@+id/btntambah"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#6c6c6c"
-        android:fontFamily="@font/skranji_bold"
-        android:text="TAMBAH"
-        android:textColor="#ffffff"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="437dp" />
+
+            <Button
+                android:id="@+id/btntambah"
+                android:layout_width="104dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="26dp"
+                android:layout_marginEnd="148dp"
+                android:layout_marginStart="148dp"
+                android:background="#6c6c6c"
+                android:fontFamily="@font/skranji_bold"
+                android:text="TAMBAH"
+                android:textColor="#ffffff"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
