bisa pesan baglog

--- a/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_baglog.xml
@@ -142,7 +142,7 @@
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintLayout3"
                 android:layout_width="368dp"
-                android:layout_height="330dp"
+                android:layout_height="288dp"
                 android:layout_marginBottom="23dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
@@ -204,7 +204,7 @@
                     android:layout_marginBottom="44dp"
                     android:layout_marginEnd="88dp"
                     android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="number"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent" />
 
@@ -283,13 +283,13 @@
                     android:id="@+id/textView23"
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/skranji"
                     android:text="Metode Pembayaran"
                     android:textSize="17sp"
-                    app:layout_constraintBottom_toTopOf="@+id/btPilih2"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/cbBox2"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -301,10 +301,10 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginBottom="16dp"
+                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="16dp"
                     android:background="@drawable/border_style"
-                    app:layout_constraintBottom_toTopOf="@+id/btPilih2"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <ImageView
@@ -321,22 +321,6 @@
                     app:layout_constraintTop_toTopOf="@+id/cbBox2"
                     app:layout_constraintVertical_bias="0.612"
                     app:srcCompat="@drawable/logo_cbox" />
-
-                <Button
-                    android:id="@+id/btPilih2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/cbBox"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginStart="16dp"
-                    android:background="#6c6c6c"
-                    android:onClick="klikPilih2"
-                    android:textColor="#ffffff"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    tools:ignore="OnClick" />
 
                 <TextView
                     android:id="@+id/textView6"
@@ -362,13 +346,46 @@
                     android:layout_marginEnd="188dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/skranji"
-                    android:text=""
+                    android:text="0"
                     android:textSize="17sp"
                     app:layout_constraintBottom_toTopOf="@+id/textView23"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/editText4" />
 
             </android.support.constraint.ConstraintLayout>
+
+            <Button
+                android:id="@+id/btPilih2"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:text="Hitung" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btPilih3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:text="Pesan"
+                    android:visibility="gone" />
+
+                <Button
+                    android:id="@+id/btPilih4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:text="Batal"
+                    android:visibility="gone" />
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
