--- a/SokaJamur/app/src/main/res/layout/activity_pesanan_saya.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_pesanan_saya.xml
@@ -31,10 +31,23 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/activity_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:layout_height="match_parent"
+            tools:context="com.aji.voley1.MainActivity">
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/lvhape"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true" />
+        </RelativeLayout>
     </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
