--- a/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
+++ b/SokaJamur/app/src/main/res/layout/activity_info_jamur.xml
@@ -174,6 +174,7 @@
                     android:layout_height="40dp"
                     android:layout_marginEnd="88dp"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText2"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -184,6 +185,7 @@
                     android:layout_height="40dp"
                     android:layout_marginEnd="88dp"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText3"
                     app:layout_constraintEnd_toEndOf="parent" />
@@ -194,6 +196,7 @@
                     android:layout_height="40dp"
                     android:layout_marginEnd="88dp"
                     android:ems="10"
+                    android:enabled="false"
                     android:inputType="textPersonName"
                     app:layout_constraintBottom_toTopOf="@+id/editText4"
                     app:layout_constraintEnd_toEndOf="parent" />
